implemented the serializer and added the continents, countries, states, cities apis.
