# app/controllers/api/admin_portal/v1/cities_controller.rb
@@ -1,0 +1,6 @@
+class Api::AdminPortal::V1::CitiesController < Api::AdminPortal::V1::AdminPortalController
+  def index
+    cities = list(City)
+    render json: CitySerializer.new(cities).to_j
+  end
+end
