# app/controllers/api/admin_portal/v1/users_controller.rb
@@ -1,7 +1,7 @@
 class Api::AdminPortal::V1::UsersController < Api::AdminPortal::V1::AdminPortalController
   def index
-    users = list(User)
-    render json: users, status: :ok
+    users = list(User).includes(:continent, :country, :state, :city)
+    render json: UserSerializer.new(users).to_j
   end
 
   private
